# archivefile

./: .gitignore  README.md  mise.toml  pyproject.toml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  project_purpose.md  suggested_commands.md  task_completion_guidelines.md  tech_stack.md
src/archivefile/: __init__.py  __main__.py  archivefiles.py
tests/: test_e2e.py
