[project]
name = "archivefile"
dynamic = ["version"]
description = "Archive file"
readme = "README.md"
authors = [
    { name = "Yoichi Tanibayashi", email = "yoichi@tanibayashi.jp" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "pyclickutils",
]

[project.scripts]
archivefile = "archivefile.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv.sources]
pyclickutils = { path = "../pyclickutils" }

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pyright>=1.1.405",
    "ruff>=0.13.2",
]
